Fix background images on ios

--- a/app/public/styles/_cover-image.scss
+++ b/app/public/styles/_cover-image.scss
@@ -9,7 +9,8 @@
   justify-content: center;
 
   @include breakpoint(large down) {
-    height: 500px;
+    height: calc(100vh - 120px);
+    background-attachment: scroll;
   }
 
   &__heading {
@@ -18,6 +19,10 @@
     font-family: $secondary-font-family;
     letter-spacing: 4px;
     margin: 0 0 50px;
+
+    @include breakpoint(small down) {
+      font-size: 50px;
+    }
   }
 
   &__paragraph {
